crates/ink/tests/ui/contract/fail/cfg/cfg-forbidden-usage-04.stderr
error: This `cfg` attribute is not allowed.

       Allowed in `#[cfg(…)]`:
       - `test`
       - `feature` (without `std`)
       - `any`
       - `not`
       - `all`
 --> tests/ui/contract/fail/cfg/cfg-forbidden-usage-04.rs:9:25
  |
9 |         #[cfg(any(test, target_family = "wasm", feature = "std"))]
  |                         ^^^^^^^^^^^^^
